tests-123/elastic_rolloutTemplate.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: demoapp-issuegen-ta
spec:
  replicas: 4
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: demoapp-issuegen-ta
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
        prometheus_io_path: '/mgmt/prometheus'
        prometheus_io_port: '8088'    
      labels:
        app: demoapp-issuegen-ta
    spec:
      containers:
        - name: rollouts-baseline
          image: docker.io/opsmxdev/issuegen:v3.0.2
          imagePullPolicy: Always
          ports:
            - containerPort: 8088
  strategy:
    canary:
      steps:
        - setWeight: 25
        - pause: { duration: 30s }
        - analysis:
            templates:
              - templateName: sj-analysis-ta
            args:
              - name: canary-hash
                valueFrom:
                  podTemplateHashValue: Latest
              - name: baseline-hash
                valueFrom:
                  podTemplateHashValue: Stable
