tests-123/elastic_service.yaml
kind: Service
apiVersion: v1
metadata:
  name: demoapp-issuegen-ta
spec:
  selector:
    app: demoapp-issuegen-ta
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8088
