tests-123/stackdriver_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rollout-canary-stackdriver-ingress-ta
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/app-root: /
spec:
  rules:
  - host: issuegenta-stack.opsmx.net
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: stackss1-app-svc-ta
            port:
              number: 80
